--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="img/gmail_logo.png" alt="logo Gmail">
+        </div>
+        <hr>
+    </header>
+    <main>
+        <div>
+            <input type="search" placeholder="Search...">
+            <input type="button" value="vai">
+        </div>
+    </main>
     
 </body>
 </html>
