--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <input type="button" value="vai">
         </div>
     </main>
+    <div>
+        You have <span id="unreadStyle"> 30 </span>unread
+    </div>
     
 </body>
 </html>
